--- a/app/src/main/res/layout/activity_send.xml
+++ b/app/src/main/res/layout/activity_send.xml
@@ -19,14 +19,14 @@
         android:layout_gravity="center">
 
         <EditText
-            android:id="@+id/msg_field"
+            android:id="@+id/contact_field"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:hint="@string/contact"
             android:layout_gravity="center_horizontal"/>
         <Button
-            android:id="@+id/send_button"
+            android:id="@+id/confirm_button"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_weight="1"
