--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,14 +23,15 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
+            android:maxLines="1"
+            android:inputType="text"
             android:hint="@string/msg" />
         <Button
             android:id="@+id/send_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/send">
-        </Button>
+            android:text="@string/send" />
     </LinearLayout>
 
     <Button
@@ -38,8 +39,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/voice"
-        android:layout_gravity="center_horizontal">
-    </Button>
+        android:layout_gravity="left" />
+<!--    change from android:layout_gravity="center_horizontal" as per specification!!-->
 
 </LinearLayout>
 
