--- a/app/src/main/res/layout/activity_send.xml
+++ b/app/src/main/res/layout/activity_send.xml
@@ -24,15 +24,17 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:hint="@string/contact"
-            android:layout_gravity="center_horizontal"/>
+            android:layout_gravity="center_horizontal"
+            android:inputType="text"
+            android:maxLines="1" />
+
         <Button
             android:id="@+id/confirm_button"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:text="@string/confirm"
-            android:layout_gravity="center_horizontal">
-        </Button>
+            android:layout_gravity="center_horizontal"/>
     </LinearLayout>
 
 </LinearLayout>
